--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "4.19.2"
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "mysql2": "3.11.2"
   },
   "devDependencies": {
     "nodemon": "3.1.4"
