--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start"
   },
+  "type": "module",
   "dependencies": {
     "next": "14.2.5",
     "react": "18.2.0",
