--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,9 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "dotenv": "16.4.5",
+    "dotenv": "^16.6.1",
     "express": "4.19.2",
-    "mysql2": "3.11.2"
+    "mysql2": "^3.11.2"
   },
   "devDependencies": {
     "nodemon": "3.1.4"
