--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "4.19.2",
     "mysql2": "^3.11.2"
