--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
   },
   "type": "module",
   "dependencies": {
-    "next": "14.2.5",
+    "next": "^14.2.35",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
