--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "express": "4.19.2",
+    "express": "^4.22.1",
     "mysql2": "^3.11.2"
   },
   "devDependencies": {
