--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,6 @@
     "next": "^14.2.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-us-map": "^1.0.3"
+    "react-usa-map": "^1.0.3"
   }
 }
