--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,12 @@
   },
   "type": "module",
   "dependencies": {
+    "d3-format": "^3.1.0",
+    "d3-geo": "^3.1.1",
+    "d3-scale": "^4.0.2",
     "next": "^14.2.35",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-simple-maps": "^3.0.0"
   }
 }
